# entry

./: ANCHOR_SETUP.md  Anchor.toml  index.html  package-lock.json  package.json  solana.tar.bz2  tailwind.config.js
programs/entry-pass/: Cargo.toml
programs/entry-pass/src/: lib.rs
src/: App.tsx
src/components/: Illustrations.tsx
src/contexts/: WalletProvider.tsx
src/lib/: mockData.ts  program.ts  solana.ts
src/pages/: Browse.tsx  Landing.tsx  Organizer.tsx  Verifier.tsx
src/types/: index.ts
