[package]
name = "entry-pass"
version = "0.1.0"
description = "Entry Pass Management Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "entry_pass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
